deploy/overlays/oke-free/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: naytife-oke-free
  labels:
    name: naytife-oke-free
    environment: oke-free
    cloud-provider: oci
