deploy/overlays/oke-free/oathkeeper-oke-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oathkeeper
spec:
  template:
    spec:
      containers:
      - name: oathkeeper
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi" 
            cpu: "300m"
      nodeSelector:
        kubernetes.io/arch: arm64
      tolerations:
      - key: "kubernetes.io/arch"
        operator: "Equal"
        value: "arm64"
        effect: "NoSchedule"
